# Glim_localization

./: .gitignore  CMakeLists.txt  DEBUG_CSV_SCHEMA.md  DESCRIPTOR_PREPROCESSING_SWEEP_REPORT.md  FRAME_126_FAILURE_ANALYSIS.md  GLIM_LOCALIZATION_ANALYSIS.md  GLIM_RELATION_MATRIX.md  GTSAM_UNDERCONSTRAINED_INVESTIGATION.md  IMMEDIATE_FIXES.md  LICENSE  LOST_RECOVERY_POLICY_DESIGN.md  OPTIMIZATION_ROADMAP.md  PHASE0_5_BASELINE_DEBUG_REPORT.md  PHASE0_6_GUARD_AND_DEBUG_REPORT.md  PHASE0_7_30S_CSV_ANALYSIS.md  PHASE0_7_30S_LOST_ANALYSIS_REPORT.md  PHASE0_8_30S_EXPERIMENT_REPORT.md  PHASE0_8_RELOCALIZATION_DIAGNOSTICS_REPORT.md  PHASE0_8_RELOCALIZATION_FAILURE_ANALYSIS.md  PHASE0_9_30S_EXPERIMENT_REPORT.md  PHASE0_9_DESCRIPTOR_SWEEP_REPORT.md  PHASE0_BASELINE_HARDENING_REPORT.md  PHASE0_REGRESSION_MATRIX.md  PHASE1_0_30S_EXPERIMENT_REPORT.md  PHASE1_0_RAW_TOPK_RECOVERY_REPORT.md  QUERY_ACCUMULATION_SWEEP_REPORT.md  README.md  RECOVERING_STABILIZATION_REPORT.md  RECOVERY_SENSITIVITY_SWEEP_REPORT.md  REJECTED_TOPK_VERIFICATION_REPORT.md  RUN_AND_BUILD_NOTES.md  SCAN_CONTEXT_SELF_QUERY_REPORT.md  SCAN_CONTEXT_THRESHOLD_SWEEP_REPORT.md  SHORT_BASELINE_SWEEP_REPORT.md  SMOKE_BASELINE_10S.md  SMOOTHER_GUARD_DESIGN.md  SMOOTHER_GUARD_SIDE_EFFECTS.md  TARGET_CONFIRMATION_GUARD_REPORT.md  TARGET_REBUILD_GUARD_EXPERIMENT.md  VERIFY_RAW_TOPK_RECOVERY_DESIGN.md  (+2 more)
config/: config.json  localization.cpu.json  localization.gpu.json  localization.json
docs/: baseline_and_contract.md  config_reference.md  deployment_and_run.md  engineering_playbook.md  experiment_record_template.md  faq.md  phase0_regression_matrix.md  quick_start.md  resource_monitoring.md  ros_interface.md
include/glim_localization/core/: localization_options.hpp  localization_status.hpp
include/glim_localization/initialization/: config_initial_pose_provider.hpp  initial_pose_options.hpp  runtime_initial_pose.hpp
include/glim_localization/map/: local_target_map.hpp  localization_map.hpp  submap_index.hpp
include/glim_localization/map_loader/: glim_map_loader.hpp  map_format_checker.hpp  map_load_options.hpp
include/glim_localization/output/: localization_result.hpp  trajectory_writer.hpp
include/glim_localization/registration/: cpu_gicp_map_registration.hpp  gpu_vgicp_map_registration.hpp  map_registration_base.hpp  registration_result.hpp
include/glim_localization/relocalization/: geometric_verifier.hpp  relocalizer_base.hpp  runtime_relocalization_request.hpp  scan_context_relocalizer.hpp
launch/: localization.launch.py
modules/extension/localization_publisher/: localization_publisher.cpp
modules/odometry/localization_cpu/: odometry_estimation_localization_cpu.cpp  odometry_estimation_localization_cpu.hpp  odometry_estimation_localization_cpu_create.cpp
rviz/: localization.rviz
src/glim_localization/core/: localization_options.cpp
src/glim_localization/initialization/: config_initial_pose_provider.cpp  runtime_initial_pose.cpp
src/glim_localization/map/: local_target_map.cpp  localization_map.cpp  submap_index.cpp
src/glim_localization/map_loader/: glim_map_loader.cpp  map_format_checker.cpp
src/glim_localization/output/: trajectory_writer.cpp
src/glim_localization/registration/: cpu_gicp_map_registration.cpp  gpu_vgicp_map_registration.cpp  map_registration_base.cpp
src/glim_localization/relocalization/: geometric_verifier.cpp  runtime_relocalization_request.cpp  scan_context_relocalizer.cpp
tests/: test_cpu_map_registration.cpp  test_geometric_verifier.cpp  test_glim_map_loader.cpp  test_localization_contracts.cpp  test_localization_map.cpp  test_localization_options.cpp  test_map_format_checker.cpp  test_plugin_module_loading.cpp  test_run_offline_localization_runtime.sh  test_scan_context_relocalizer.cpp  test_submap_index.cpp  test_trajectory_writer.cpp
tools/: analyze_debug_csv.py  benchmark_localization.cpp  check_scan_context_relocalizer.cpp  glim_localization_map_info.cpp  plot_trajectory.py  run_offline_localization.sh  run_phase0_regression_matrix.sh  run_smoke_baseline_10s.sh  run_standard_experiment.sh  sweep_scan_context_descriptors.py
tools/monitor/: generate_usage_report.py  monitor_gpu.sh  monitor_iostat.sh  monitor_pidstat.sh  monitor_ps.sh  plot_usage.py  run_with_time.sh  summarize_usage.py  usage_report_lib.py
