<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim_localization</name>
  <version>0.1.0</version>
  <description>Localization-only runtime modules based on GLIM</description>
  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <author email="k.koide@aist.go.jp">k.koide</author>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>glim</depend>
  <depend>gtsam_points</depend>
  <depend>spdlog</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">std_srvs</depend>
  <depend condition="$ROS_VERSION == 2">diagnostic_msgs</depend>
  <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">tf2_ros</depend>
  <depend condition="$ROS_VERSION == 2">visualization_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
